--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
@@ -277,3 +277,25 @@ c2）引用的所有Jar包都必须明确为其指定版本号，不然在对函
 </build>
 </project>
 ```
+
+d）编译Jar包
+
+由于在使用时要获取所定义函数及其参数的注释信息，而每个参数的注释信息是通过反射机制从` Method对象 `中获取到其参数列表，然后和注释注解` ParamDesc `中定义的参数名来进行匹配的，因此编译后的` Class文件 `中必须要包含方法的参数信息。
+
+d1）查看Class文件中是否有参数信息的命令。
+
+`javap -v xxx.class`
+
+![1-2](https://www.feisuanyz.com/fsimage/gj-image/gj_0001_img.png)
+
+##### 图1-2 查看Class文件中是否有参数信息的命令
+
+d2）如果编译后的Class文件中没有方法的参数信息，那么就需要对IDE进行相关的设置，以确保其在编译时能够生成方法的参数信息。
+
+`Eclipse配置：`
+
+![1-3](https://www.feisuanyz.com/fsimage/gj-image/gj_0002_img.png)
+
+##### 图1-3 Eclipse配置
+
+` IntelliJ IDEA配置 `：需要在IDEA中配置一下，让其编译时生成方法的参数` -parameters `。
