--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
@@ -326,3 +326,16 @@ e）设置pom文件编译选项。
       </plugins>
     </build>
 ```
+
+f）对自定义的函数打jar包，生成如下类似文件。
+
+```
+demo-function-1.0.0.jar
+demo-function-1.0.0.pom
+```
+
+g）将生成的` demo-function-1.0.0.jar `和` demo-function-1.0.0.pom `压缩成一个zip包上传到平台即可。
+
+##### 说明：
+
+##### 如何导入自定义函数，请参见[《SoFlu社区版基础操作指南第5.1.1节：导入自定义函数》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/5.%20%E5%87%BD%E6%95%B0%E5%BA%93%E4%B8%AD%E5%BF%83/%E5%87%BD%E6%95%B0%E5%BA%93%E4%B8%AD%E5%BF%83.md#11-%E5%AF%BC%E5%85%A5%E8%87%AA%E5%AE%9A%E4%B9%89%E5%87%BD%E6%95%B0)详细操作步骤。
