--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/4. 自定义插件.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/4. 自定义插件.md
@@ -1,1 +1,13 @@
-test
+### 4. 自定义插件
+
+#### 4.1 自定义插件
+
+插件的定义需要按照以下xml格式进行描述，然后存放到项目中的` resources `目录下名为` plugins.xml `的文件中，并一起打成Jar包上传到平台即可。
+
+#### 4.1.1 Demo工程包
+
+插件工程包下载地址：demo-plugin.zip
+
+#### 4.1.2 操作步骤
+
+a）配置自定义插件XML文件。
