--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/4. 自定义插件.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/4. 自定义插件.md
@@ -11,3 +11,20 @@
 #### 4.1.2 操作步骤
 
 a）配置自定义插件XML文件。
+
+正确的示例如下：
+
+```
+<?xml version="1.0" encoding="UTF-8"?>
+<plugins>
+    <!-- Explain: 插件信息XML定义 
+        type: 插件类型 (interceptor: 拦截器，initializer: 初始化器，activityLog：流程日志存储器)
+        name: 插件名称 (SPI名称只能以大写英文开头，包含英文、数字 、下划线 1-50位)
+        classpath: 插件类路径 (不能为空)
+        desc: 插件描述 (不能为空)
+     -->
+    <plugin type="initializer" name="Initializer_DemoInitialRunner" classpath="com.feisuanyz.flow.demo.plugin.initializer.DemoInitialRunner" desc="初始化器Demo" />
+    <plugin type="interceptor" name="Interceptor_DemoInterceptor" classpath="com.feisuanyz.flow.demo.plugin.interceptor.DemoInterceptor" desc="拦截器Demo" />
+    <plugin type="activityLog" name="ActivityLog_DemoActivityLog" classpath="com.feisuanyz.flow.demo.plugin.activitylog.DemoActivityLog" desc="流程日志Demo" />
+</plugins>
+```
