--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/5. 自定义组件.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/5. 自定义组件.md
@@ -33,3 +33,20 @@ a）编辑pom.xml文件，在pom.xml文件中增加依赖包。
      <systemPath>${开发辅助工具路径}/flow-core-cmpt-${version}.jar</systemPath>
 </dependency>
 ```
+
+b）开发实现FlowComponent接口。
+
+包名：` com.feisuanyz.flow.component.FlowComponent `
+
+类名：` FlowComponent `
+
+实现方法：
+
+```
+/**
+ * 执行组件
+ * @param parameter 组件参数
+ * @throws FlowComponentException 异常
+ */
+void execute(FlowComponentParameter parameter) throws FlowComponentException
+```
