--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/5. 自定义组件.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/5. 自定义组件.md
@@ -64,3 +64,19 @@ c1）获取单条记录的参数值
 c2）获取多条记录的参数值
 
 ` parameter.getInputParameterArray("parameterName",类型); `
+
+d）设置出参。
+
+##### 说明：出参是指流转到下一个组件的参数内容，所有的输出都必须在定义组件的时候定义出参，数据类型必须要和实际传出的数据类型相符，否则将会抛出FlowComponentException异常。
+
+下面介绍设置出参的方式：
+
+` parameter.setOutputParameter("parameterName",value); `
+
+##### 说明：如果出参定义了默认值，又没有对输出参数进行赋值，则程序会自动将默认值赋到出参。
+
+e）定义方式
+
+组件的定义需要按照以下` xml `格式进行描述，文件名必须为：` components.xml `，然后存放到项目中的` resources `目录下，一起打成` jar `包上传到平台即可。
+
+XML文件示例如下：
