--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/5. 自定义组件.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/5. 自定义组件.md
@@ -80,3 +80,66 @@ e）定义方式
 组件的定义需要按照以下` xml `格式进行描述，文件名必须为：` components.xml `，然后存放到项目中的` resources `目录下，一起打成` jar `包上传到平台即可。
 
 XML文件示例如下：
+
+```
+<?xml version="1.0" encoding="UTF-8"?>
+
+<components>
+    <component name="SingleSqlComponent"
+               title="单SQL组件"
+ implClass="com.feisuanyz.flow.component.sql.SingleSqlComponent"
+               tag="sql"
+               description="单SQL组件"
+               groupName="SQL"
+               icon="SingleSqlComponent">
+        <inputParameters>
+            <inputParameter name="sqlDto"
+                            title="SQL信息"
+           dataType="com.feisuanyz.flow.component.sql.dto.SqlDTO"
+                            controlType="form-single-value"
+                            required="true"
+                            hided="false"
+                            description="填入SQL信息">
+                <children>
+                    <inputParameter name="sqlName"
+                                    title="SQL名称"
+                                    dataType="java.lang.String"
+                                    controlType="Table"          optionImplClass="com.feisuanyz.flow.component.sql.SelectAllSqlTableControl"
+                                    required="true"
+                                    description="被执行的SQL的名称"/>
+                    <inputParameter name="inputParameter"
+                                    title="入参"
+                                    dataType="java.lang.Object"
+                                    controlType="Input"
+                                    required="true"
+                                    variable="true"
+                                    description="执行SQL传入的参数，支持表达式${xxx}"/>
+                    <inputParameter name="primaryKey"
+                                    title="主键名称"
+                                    dataType="java.lang.String"
+                                    controlType="Input"
+                                    description="表的主键名称，新增时必填"/>
+                </children>
+            </inputParameter>
+
+            <inputParameter name="isList"
+                            title="执行结果是否为列表"
+                            dataType="java.lang.Boolean"
+                            controlType="Switch"
+                            defaultValue="false"
+                            required="true"
+                            description="执行结果是否为列表"/>
+
+        </inputParameters>
+        <!-- 定义出参列表 -->
+        <outputParameters>
+            <outputParameter name="singleSqlExecuteResult"
+                             title="单SQL执行结果"
+                             dataType="java.lang.Object"
+                             required="true"
+                             description="单SQL执行结果"/>
+        </outputParameters>
+    </component>
+
+</components>
+```
