--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/5. 自定义组件.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/5. 自定义组件.md
@@ -186,3 +186,14 @@ e9）outputParameters：组件的出参列表定义，` <outputParameter>xxx</ou
 - required：是否必填，可选值：true/false
 - description：描述
 ```
+
+f）对自定义的组件打jar包，生成如下类似文件。
+
+```
+demo-component-1.0.0.jar
+demo-component-1.0.0.pom
+```
+
+g）将生成的` demo-component-1.0.0.jar `和` demo-component-1.0.0.pom `压缩成一个zip包上传到平台即可。
+
+##### 说明：如何导入自定义组件，请参见[《SoFlu社区版基础操作指南第2.1.1节：导入组件》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%BB%84%E4%BB%B6%E7%AE%A1%E7%90%86/%E7%BB%84%E4%BB%B6%E7%AE%A1%E7%90%86.md#11-%E5%AF%BC%E5%85%A5%E7%BB%84%E4%BB%B6)详细操作步骤。
