--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/6. 自定义资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/6. 自定义资源实例.md
@@ -1,1 +1,17 @@
-test
+### 6. 自定义资源实例
+
+#### 6.1 自定义资源实例
+
+通过自行定义的资源实例，先上传至平台进行审核，只有平台审核通过的资源实例，才能上架该平台使用。
+
+#### 6.1.1 前提条件
+
+自定义资源实例需要下载如下Demo工程包和开发辅助工具，具体如下：
+
+资源实例Demo工程包下载地址：demo-resource.zip
+
+下载开发辅助工具：在全自动开发平台中，单击右上角下载开发辅助工具，如图1-1所示。
+
+![1-1](https://www.feisuanyz.com/fsimage/gj-image/gj_0000_img.png)
+
+##### 图1-1 下载开发辅助工具
