--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/6. 自定义资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/6. 自定义资源实例.md
@@ -15,3 +15,29 @@
 ![1-1](https://www.feisuanyz.com/fsimage/gj-image/gj_0000_img.png)
 
 ##### 图1-1 下载开发辅助工具
+
+#### 6.1.2 操作步骤
+
+a）在Pom文件中增加依赖包。
+
+包名：` com.feisuanyz.flow.resource `
+
+类名：` Resource `
+
+```
+<dependency>
+     <groupId>com.feisuanyz.flow</groupId>
+     <artifactId>flow-core-cmpt</artifactId>
+     <version>${version}</version>
+     <scope>provided</scope>
+     <systemPath>${开发辅助工具路径}/flow-core-cmpt-${version}.jar</systemPath>
+</dependency>
+```
+
+b）实现Resource接口。
+
+包名：` com.feisuanyz.flow.resource `
+
+类名：` Resource `
+
+实现方法：
