--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/6. 自定义资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/6. 自定义资源实例.md
@@ -41,3 +41,29 @@ b）实现Resource接口。
 类名：` Resource `
 
 实现方法：
+
+```
+/**
+ * 创建资源实例
+ * @param parameters 参数
+ * @return 实例对象
+ * @throws ResourceException
+ */
+T newInstance(ResourceParameter parameters) throws ResourceException;
+```
+
+c）获取资源实例。
+
+平台提供了工具类` ResourceUtil.java `调用相应的方法，获取到的对象是Objec，强转成对应的实例对象即可。
+
+方法示例如下：
+
+```
+/**
+ * 获取资源实例
+ * @param resourceName 资源名称
+ * @return 资源实例
+ */
+public static Object getResourceInstance(String resourceName){
+    return getResourceInstance(ProcessInfoHolder.get().getProjectId(),resourceName);
+}
