--- a/SoFlu（前端）全自动开发平台教程/1. 什么是（前端）全自动开发平台.md
+++ b/SoFlu（前端）全自动开发平台教程/1. 什么是（前端）全自动开发平台.md
@@ -9,3 +9,17 @@
 （前端）全自动开发平台是飞算SoFlu软件机器人系列产品中上线的第三个平台，是一个高效、安全、稳定的前端应用开发工具，可帮助用户快速构建前端界面交互，大大降低了开发门槛，让不懂代码的业务人员都可以根据业务需求进行页面自定义开发，为企业降低了人员成本，同时提高了开发效率、缩短项目开发周期。
 
 ##### 1.1.2 功能特性
+
+a）可视化开发模式
+
+（前端）全自动开发平台提供一套可视化、配置化的开发工具，包含丰富的页面控件库，最大限度地满足用户的开发需求，用户通过拖拽使用不同的控件并进行相关配置，便可快速开发出前端界面。
+
+b）简化前后端数据联调
+
+（前端）全自动开发平台统一前端交互效果展示和后端接口返回的数据格式，标准化、规范化的数据对接简化了前后端数据联调过程。
+
+c）多风格开发模板
+
+（前端）全自动开发平台提供多种风格的开发模板，包含应用模板、页面模板和区块模板，用户可以根据不同的业务场景、交互效果，选择合适的模板，可轻松自定义设计页面效果，极大提升页面开发效率。同时用户还可以将常用的应用功能或做过的应用发布至模板市场，实现快速复用及构建应用。
+
+d）多方式数据对接
