--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
@@ -1,1 +1,9 @@
-test
+### 1. 用户注册
+
+#### 1.1 用户注册
+
+本节为您介绍用户注册功能的实现。
+
+##### 1.1.1 功能描述
+
+在【用户注册页面】填写好用户注册信息以后，输入注册手机号，单击“发送验证码”，即可接收到验证码；填写收到的验证码，单击“注册”按钮进入【用户管理页面】，即可查看所有用户注册信息，并可对每一位用户进行启用或停用的操作。
