--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
@@ -7,3 +7,11 @@
 ##### 1.1.1 功能描述
 
 在【用户注册页面】填写好用户注册信息以后，输入注册手机号，单击“发送验证码”，即可接收到验证码；填写收到的验证码，单击“注册”按钮进入【用户管理页面】，即可查看所有用户注册信息，并可对每一位用户进行启用或停用的操作。
+
+![1-1](https://www.feisuanyz.com/fspage/alcj/register/userregister_1_1.png)
+
+##### 图1-1 用户注册页面
+
+##### 1.1.2 功能特性
+
+在（后端）全自动开发平台准备前端页面需调用到的5个接口：
