--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
@@ -15,3 +15,15 @@
 ##### 1.1.2 功能特性
 
 在（后端）全自动开发平台准备前端页面需调用到的5个接口：
+
+![1-2](https://www.feisuanyz.com/fspage/alcj/register/userregister_2_1.png)
+
+##### 图1-2 需调用到的5个接口
+
+a）saveUserregistration接口
+
+用于新增用户注册信息。
+
+![1-3](https://www.feisuanyz.com/fspage/alcj/register/userregister_2_2.png)
+
+##### 图1-3 saveUserregistration接口流程图
