--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
@@ -27,3 +27,15 @@ a）saveUserregistration接口
 ![1-3](https://www.feisuanyz.com/fspage/alcj/register/userregister_2_2.png)
 
 ##### 图1-3 saveUserregistration接口流程图
+
+b）updateUserregistration接口
+
+用于更新用户注册信息。
+
+![1-4](https://www.feisuanyz.com/fspage/alcj/register/userregister_2_3.png)
+
+##### 图1-4 updateUserregistration接口流程图
+
+c）pageListUserRegistration接口
+
+用于查询所有用户信息。
