--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
@@ -39,3 +39,15 @@ b）updateUserregistration接口
 c）pageListUserRegistration接口
 
 用于查询所有用户信息。
+
+![1-5](https://www.feisuanyz.com/fspage/alcj/register/userregister_2_4.png)
+
+##### 图1-5 pageListUserRegistration接口流程图
+
+d）sendVerifyCode接口
+
+用于发送手机验证码。
+
+![1-6](https://www.feisuanyz.com/fspage/alcj/register/userregister_2_5.png)
+
+##### 图1-6 sendVerifyCode接口流程图1
