--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
@@ -51,3 +51,17 @@ d）sendVerifyCode接口
 ![1-6](https://www.feisuanyz.com/fspage/alcj/register/userregister_2_5.png)
 
 ##### 图1-6 sendVerifyCode接口流程图1
+
+![1-7](https://www.feisuanyz.com/fspage/alcj/register/userregister_2_6.png)
+
+##### 图1-7 sendVerifyCode接口流程图2
+
+e）checkVerifyCode接口
+
+用于验证手机验证码。
+
+![1-8](https://www.feisuanyz.com/fspage/alcj/register/userregister_2_7.png)
+
+##### 图1-8 checkVerifyCode接口流程图1
+
+##### 1.1.3 关联（后端）全自动开发平台项目
