--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
@@ -65,3 +65,15 @@ e）checkVerifyCode接口
 ##### 图1-8 checkVerifyCode接口流程图1
 
 ##### 1.1.3 关联（后端）全自动开发平台项目
+
+##### 前提条件： 您已完成创建前端应用项目、创建页面等基本操作。
+
+由于在（前端）全自动开发平台创建的项目会同步显示在（后端）全自动开发平台，若后端接口在相同项目名下开发，在选择关联后端项目时，选择同名项目即可；若没有，选择对应的（后端）全自动开发平台项目，如下图所示：
+
+![1-9](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_3_1.png)
+
+##### 图1-9 选择后端项目
+
+##### 1.1.4 页面构建、数据绑定
+
+用户注册功能包含【用户注册页面】、【导航栏页面】和【用户管理页面】三个页面的构建，其中【导航栏页面】与【用户管理页面】为页面嵌套关系，即【导航栏页面】需关联【用户管理页面】进行展示，如下图所示：
