--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
@@ -77,3 +77,17 @@ e）checkVerifyCode接口
 ##### 1.1.4 页面构建、数据绑定
 
 用户注册功能包含【用户注册页面】、【导航栏页面】和【用户管理页面】三个页面的构建，其中【导航栏页面】与【用户管理页面】为页面嵌套关系，即【导航栏页面】需关联【用户管理页面】进行展示，如下图所示：
+
+![1-10](https://www.feisuanyz.com/fspage/alcj/register/userregister_4_1.png)
+
+##### 图1-10 【导航栏页面】需关联【用户管理页面】
+
+a）用户注册页面
+
+a1）页面构建
+
+通过点击页面开发界面中大纲树选项，即可查看该页面使用到的所有控件，点击控件右侧的眼睛按钮，可显示或隐藏对应控件以展示不同的页面效果。控件的具体配置可根据实际需求进行自定义配置，若不清楚如何配置控件，请查看对应控件的帮助文档。
+
+![1-11](https://www.feisuanyz.com/fspage/alcj/register/userregister_4_2.png)
+
+##### 图1-11 页面构建
