--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
@@ -91,3 +91,19 @@ a1）页面构建
 ![1-11](https://www.feisuanyz.com/fspage/alcj/register/userregister_4_2.png)
 
 ##### 图1-11 页面构建
+
+a2）数据绑定
+
+a2-1）为发送验证码按钮绑定：当点击时，调用sendVerifyCode接口发送手机验证码，传入注册手机号，直接引用注册手机号输入框控件即可。
+
+![1-12](https://www.feisuanyz.com/fspage/alcj/register/userregister_4_3.png)
+
+##### 图1-12 为发送验证码按钮绑定
+
+![1-13](https://www.feisuanyz.com/fspage/alcj/register/userregister_4_4.png)
+
+##### 图1-13 执行绑定动作
+
+![1-14](https://www.feisuanyz.com/fspage/alcj/register/userregister_4_5.png)
+
+##### 图1-14 变量绑定
