--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
@@ -133,3 +133,17 @@ b） 导航栏页面
 ![1-19](https://www.feisuanyz.com/fspage/alcj/register/userregister_4_10.png)
 
 ##### 图1-19 设置为页面组件
+
+c）用户管理页面
+
+c1）页面构建
+
+由于用户管理页面只需要设计一张表单展示用户数据，可使用（前端）全自动开发平台的表单设计功能，利用表单生成页面，具体操作请参见“操作指南 > 表单设计”。
+
+##### 说明：用户管理页面也可直接使用控件库中的表格控件进行构建。
+
+![1-20](https://www.feisuanyz.com/fspage/alcj/register/userregister_4_11.png)
+
+##### 图1-20 点击表单设计
+
+![1-21](https://www.feisuanyz.com/fspage/alcj/register/userregister_4_12.png)
