--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
@@ -147,3 +147,19 @@ c1）页面构建
 ##### 图1-20 点击表单设计
 
 ![1-21](https://www.feisuanyz.com/fspage/alcj/register/userregister_4_12.png)
+
+##### 图1-21 表单设置
+
+c2）数据绑定
+
+c2-1）为表格控件绑定：调用pageListUserRegistration接口分页查询所有用户注册信息。
+
+![1-22](https://www.feisuanyz.com/fspage/alcj/register/userregister_4_13.png)
+
+##### 图1-22 为表格控件绑定
+
+c2-2）为操作列-启用/停用选项绑定：当点击时，调用updateUserregistration接口修改用户状态，进入属性栏操作列配置进行相关设置即可。
+
+![1-23](https://www.feisuanyz.com/fspage/alcj/register/userregister_4_14.png)
+
+##### 图1-23 选择操作列配置
