--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
@@ -163,3 +163,13 @@ c2-2）为操作列-启用/停用选项绑定：当点击时，调用updateUserr
 ![1-23](https://www.feisuanyz.com/fspage/alcj/register/userregister_4_14.png)
 
 ##### 图1-23 选择操作列配置
+
+![1-24](https://www.feisuanyz.com/fspage/alcj/register/userregister_4_15.png)
+
+##### 图1-24 进行操作列配置
+
+![1-25](https://www.feisuanyz.com/fspage/alcj/register/userregister_4_16.png)
+
+##### 图1-25 执行绑定动作
+
+c3）页面预览、功能测试
