--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
@@ -173,3 +173,17 @@ c2-2）为操作列-启用/停用选项绑定：当点击时，调用updateUserr
 ##### 图1-25 执行绑定动作
 
 c3）页面预览、功能测试
+
+c3-1）上述所有操作完成后，在【用户注册页面】所在页面设计界面上方，单击“预览”选项进行页面预览。
+
+![1-26](https://www.feisuanyz.com/fspage/alcj/register/userregister_4_17.png)
+
+##### 图1-26 单击“预览”选项
+
+c3-2）预览加载完成后，系统将自动弹出浏览器窗口默认显示设置为首页的页面，此时您可以输入用户注册信息，进行相关功能测试。
+
+##### 说明：在浏览器按F12键，即可查看手机端效果。
+
+提交注册信息：
+
+![1-27](https://www.feisuanyz.com/fspage/alcj/register/userregister_4_18.png)
