--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/1. 用户注册.md
@@ -1,10 +1,10 @@
-### 1. 用户注册
+### 2. 平台实践
 
-#### 1.1 用户注册
+#### 2.1 用户注册
 
 本节为您介绍用户注册功能的实现。
 
-##### 1.1.1 功能描述
+##### 2.1.1 功能描述
 
 在【用户注册页面】填写好用户注册信息以后，输入注册手机号，单击“发送验证码”，即可接收到验证码；填写收到的验证码，单击“注册”按钮进入【用户管理页面】，即可查看所有用户注册信息，并可对每一位用户进行启用或停用的操作。
 
@@ -12,7 +12,7 @@
 
 ##### 图1-1 用户注册页面
 
-##### 1.1.2 功能特性
+##### 2.1.2 功能特性
 
 在（后端）全自动开发平台准备前端页面需调用到的5个接口：
 
@@ -64,7 +64,7 @@ e）checkVerifyCode接口
 
 ##### 图1-8 checkVerifyCode接口流程图1
 
-##### 1.1.3 关联（后端）全自动开发平台项目
+##### 2.1.3 关联（后端）全自动开发平台项目
 
 ##### 前提条件： 您已完成创建前端应用项目、创建页面等基本操作。
 
@@ -74,7 +74,7 @@ e）checkVerifyCode接口
 
 ##### 图1-9 选择后端项目
 
-##### 1.1.4 页面构建、数据绑定
+##### 2.1.4 页面构建、数据绑定
 
 用户注册功能包含【用户注册页面】、【导航栏页面】和【用户管理页面】三个页面的构建，其中【导航栏页面】与【用户管理页面】为页面嵌套关系，即【导航栏页面】需关联【用户管理页面】进行展示，如下图所示：
 
