--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -21,3 +21,11 @@ d）查询回访记录
 ##### 图2-1 客户意见反馈子功能
 
 ##### 说明：通过在【客户意见反馈页面】填写意见反馈信息，单击“提交反馈”或者“后台”即可进入【后台管理页面】；在【后台管理页面】，可对每一条反馈意见进行回访操作，进入【添加回访记录页面】；在【添加回访记录页面】填写该条反馈的回访记录内容，单击“提交”，再次进入【后台管理页面】，便可以看到对应反馈意见记录的回访状态字段由未回访变化为已回访；同时在【后台管理页面】单击“查看回访记录”可进入【查询回访记录页面】查看所有的回访记录。
+
+##### 2.2.2 后端接口准备
+
+在（后端）全自动开发平台准备前端页面需调用到的5个接口：
+
+![2-2](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_2_1.png)
+
+##### 图2-2 需调用的5个接口
