--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -29,3 +29,11 @@ d）查询回访记录
 ![2-2](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_2_1.png)
 
 ##### 图2-2 需调用的5个接口
+
+a）客户意见反馈录入接口
+
+用于新增客户意见反馈信息。
+
+![2-3](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_2_2.png)
+
+##### 图2-3 客户意见反馈录入接口流程图
