--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -37,3 +37,11 @@ a）客户意见反馈录入接口
 ![2-3](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_2_2.png)
 
 ##### 图2-3 客户意见反馈录入接口流程图
+
+b）查询客户反馈意见列表接口
+
+用于查询客户反馈意见数据，显示在【后台管理页面】。
+
+![2-4](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_2_3.png)
+
+##### 图2-4 查询客户反馈意见列表接口流程图
