--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -45,3 +45,15 @@ b）查询客户反馈意见列表接口
 ![2-4](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_2_3.png)
 
 ##### 图2-4 查询客户反馈意见列表接口流程图
+
+c）查询字典表数据接口
+
+用于根据参数opinionType（意见类型）和satisfaction（满意度）查询对应的字典表数据，作为选项数据返回在【用户注册页面】中“意见类型”多选框及“满意度”单选框。
+
+![2-5](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_2_4.png)
+
+##### 图2-5 查询字典表数据接口流程图
+
+![2-6](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_2_5.png)
+
+##### 图2-6 数据返回效果 
