--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -57,3 +57,13 @@ c）查询字典表数据接口
 ![2-6](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_2_5.png)
 
 ##### 图2-6 数据返回效果 
+
+d）新增回访记录接口
+
+用于添加回访记录。
+
+![2-7](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_2_6.png)
+
+##### 图2-7 新增回访记录接口流程图
+
+e）查询回访记录接口
