--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -67,3 +67,11 @@ d）新增回访记录接口
 ##### 图2-7 新增回访记录接口流程图
 
 e）查询回访记录接口
+
+用于查询回访记录。
+
+![2-8](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_2_7.png)
+
+##### 图2-8 查询回访记录接口流程图
+
+##### 2.2.3 关联（后端）全自动开发平台项目
