--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -75,3 +75,13 @@ e）查询回访记录接口
 ##### 图2-8 查询回访记录接口流程图
 
 ##### 2.2.3 关联（后端）全自动开发平台项目
+
+##### 前提条件：您已完成创建前端应用项目、创建页面等基本操作。
+
+由于在（前端）全自动开发平台创建的项目会同步显示在（后端）全自动开发平台，若后端接口在相同项目名下开发，在选择关联后端项目时，选择同名项目即可，如下图所示：
+
+![2-9](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_3_1.png)
+
+##### 图2-9 新增后端项目
+
+##### 2.2.4 页面构建、数据绑定
