--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -85,3 +85,11 @@ e）查询回访记录接口
 ##### 图2-9 新增后端项目
 
 ##### 2.2.4 页面构建、数据绑定
+
+客户意见反馈功能包含【客户意见反馈页面】、【后台管理页面】、【添加回访记录页面】和【查询回访记录页面】四个页面的构建，如下图所示，图中的连接线代表页面间的跳转关系。
+
+![2-10](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_1.png)
+
+##### 图2-10 客户意见反馈功能
+
+a）客户意见反馈页面
