--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -93,3 +93,13 @@ e）查询回访记录接口
 ##### 图2-10 客户意见反馈功能
 
 a）客户意见反馈页面
+
+a1）页面构建
+
+![2-11](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_2.png)
+
+##### 图2-11 页面构建
+
+a2）数据绑定
+
+a2-1）为页面绑定：当页面加载前，两次调用查询字典表数据接口，获取选项数据返回在【用户注册页面】中“意见类型”多选框及“满意度”单选框。
