--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -103,3 +103,13 @@ a1）页面构建
 a2）数据绑定
 
 a2-1）为页面绑定：当页面加载前，两次调用查询字典表数据接口，获取选项数据返回在【用户注册页面】中“意见类型”多选框及“满意度”单选框。
+
+说明：调用接口前需设置4个页面变量，如下图“为页面绑定2”所示，前两个页面变量opinionType、satisfaction为传入的查询参数，后两个opinionTypeName、satisfactionName为选项值的接收参数。
+
+![2-12](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_3.png)
+
+##### 图2-12 为页面绑定1
+
+![2-13](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_4.png)
+
+##### 图2-13 为页面绑定2
