--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -171,3 +171,13 @@ b2）数据绑定
 b2-1）为表格控件绑定：调用查询客户反馈意见列表接口，将所有的客户反馈意见信息展示在【后台管理页面】。
 
 ![2-26](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_16.png)
+
+##### 图2-26 为表格控件绑定1
+
+![2-27](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_17.png)
+
+##### 图2-27 为表格控件绑定2
+
+b2-2）为表格控件中的顶部操作-查询回访记录绑定：当点击时，跳转至【查询回访记录页面】。
+
+![2-28](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_18.png)
