--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -199,3 +199,13 @@ b2-2）为表格控件中的顶部操作-查询回访记录绑定：当点击时
 b2-3）为操作列-回访绑定：当点击时，跳转至【添加回访记录页面】，同时将表格当前行变量中的反馈人联系方式传递到【添加回访记录页面】，用参数contactWay表示，如下图“为操作列回访绑定4”、图“为操作列回访绑定5”所示：
 
 ##### 说明：此处传递反馈人联系方式，用于在【添加回访记录页面】同时将反馈人联系方式和回访记录内容添加至回访记录列表。
+
+![2-32](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_18.png)
+
+##### 图2-28 为顶部操作查询回访记录绑定1
+
+![2-33](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_23.png)
+
+##### 图2-33 为顶部操作查询回访记录绑定2
+
+![2-34](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_24.png)
