--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -209,3 +209,13 @@ b2-3）为操作列-回访绑定：当点击时，跳转至【添加回访记录
 ##### 图2-33 为顶部操作查询回访记录绑定2
 
 ![2-34](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_24.png)
+
+##### 图2-34 为顶部操作查询回访记录绑定3
+
+![2-35](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_25.png)
+
+##### 图2-35 为顶部操作查询回访记录绑定4
+
+![2-36](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_26.png)
+
+##### 图2-36 为顶部操作查询回访记录绑定5
