--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -219,3 +219,17 @@ b2-3）为操作列-回访绑定：当点击时，跳转至【添加回访记录
 ![2-36](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_26.png)
 
 ##### 图2-36 为顶部操作查询回访记录绑定5
+
+c）添加回访记录页面
+
+c1）页面构建
+
+![2-37](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_29.png)
+
+##### 图2-37 页面构建
+
+c2）数据绑定
+
+c2-1）为提交按钮控件绑定：当点击时，调用新增回访记录接口，传入联系方式和回访记录内容；同时跳转至【后台管理页面】。
+
+##### 注意：
