--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -233,3 +233,13 @@ c2）数据绑定
 c2-1）为提交按钮控件绑定：当点击时，调用新增回访记录接口，传入联系方式和回访记录内容；同时跳转至【后台管理页面】。
 
 ##### 注意：
+
+##### c2-1a）传入联系方式之前需要先在【添加回访记录页面】设置一个同名参数变量contactWay，用于接收【后台管理页面】在点击回访按钮传递过来的反馈人联系方式，如下图“为提交按钮控件绑定1”所示。
+
+##### c2-1b)新增回访记录接口中，不仅会新增一条回访记录，还会修改对应反馈意见的回访状态，将未回访修改为已回访，具体可见新增回访记录接口的流程图。
+
+![2-38](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_30.png)
+
+##### 图2-38 为提交按钮控件绑定1
+
+![2-39](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_31.png)
