--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -273,3 +273,13 @@ d）查询回访记录页面
 d1）页面构建
 
 ![2-45](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_37.png)
+
+##### 图2-45 页面构建
+
+d2）数据绑定
+
+d2-1）为表格控件绑定：通过调用查询回访记录接口获取数据，显示在【查询回访记录页面】。
+
+![2-46](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_27.png)
+
+##### 图2-46 为表格控件绑定1
