--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -295,3 +295,13 @@ e1）上述所有操作完成后，在【客户意见反馈页面】所在页面
 ![2-48](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_39.png)
 
 ##### 图2-48 单击“预览”选项
+
+e2）预览加载完成后，系统将自动弹出浏览器窗口展示页面，此时您可以输入客户意见反馈信息，并进行相关操作，检测是否可以正常运行。
+
+##### 说明：在浏览器按F12键，即可查看手机端效果。
+
+提交反馈意见：
+
+![2-49](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_40.png)
+
+##### 图2-49 提交反馈意见
