--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -305,3 +305,15 @@ e2）预览加载完成后，系统将自动弹出浏览器窗口展示页面，
 ![2-49](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_40.png)
 
 ##### 图2-49 提交反馈意见
+
+查看反馈意见列表：
+
+![2-50](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_41.png)
+
+##### 图2-50 查看反馈意见列表
+
+添加回访记录：
+
+![2-51](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_42.png)
+
+##### 图2-51 添加回访记录1
