--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -317,3 +317,13 @@ e2）预览加载完成后，系统将自动弹出浏览器窗口展示页面，
 ![2-51](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_42.png)
 
 ##### 图2-51 添加回访记录1
+
+![2-52](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_43.png)
+
+##### 图2-52 添加回访记录2
+
+修改回访状态：
+
+![2-53](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_44.png)
+
+##### 图2-53 修改回访状态
