--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -327,3 +327,13 @@ e2）预览加载完成后，系统将自动弹出浏览器窗口展示页面，
 ![2-53](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_44.png)
 
 ##### 图2-53 修改回访状态
+
+查看回访记录列表：
+
+![2-54](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_45.png)
+
+##### 图2-54 查看回访记录列表1
+
+![2-55](https://www.feisuanyz.com/fspage/alcj/feedback/clientadvicefeedback_4_46.png)
+
+##### 图2-55 查看回访记录列表2
