--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
@@ -3,3 +3,17 @@
 #### 2.3 春节疫情防控
 
 为了加强春节后企业复工安全及环保，做好新冠疫情防控工作，全面提升企业安全和环保系数，企业急需开发春节疫情防控功能；员工提交报务信息后，程序便可自动统计从中高风险地区返回的员工数量及员工信息。由于时间紧、任务重，使用飞算SoFlu软件机器人进行开发，可以大大地提升开发效率，保证及时开发出功能，本节为您介绍使用飞算SoFlu软件机器人开发该功能的具体操作过程。
+
+##### 2.3.1 功能描述
+
+春节疫情防控功能的实现具体包含以下子功能：
+
+a）企业员工提交报务信息
+
+b）进行风险地统计
+
+c）查询所有申报信息
+
+![3-1](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_1_1.png)
+
+##### 图3-1 春节疫情防控功能
