--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
@@ -17,3 +17,13 @@ c）查询所有申报信息
 ![3-1](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_1_1.png)
 
 ##### 图3-1 春节疫情防控功能
+
+##### 说明：企业员工在【人员报务信息页面】填写人员报务信息之后，单击“申报”即可进入【风险地统计页面】，该页面统计了中高风险地区的人员数量及相关人员的信息，单击“查看全部”即可进入【申报信息查询页面】查看所有员工的申报信息，并按条件进行查询。
+
+##### 2.3.2 后端接口准备
+
+在（后端）全自动开发平台准备前端页面需调用到的5个接口：
+
+![3-2](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_2_1.png)
+
+##### 图3-2 需调用到的5个接口
