--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
@@ -27,3 +27,11 @@ c）查询所有申报信息
 ![3-2](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_2_1.png)
 
 ##### 图3-2 需调用到的5个接口
+
+a）查询字典表接口流程图
+
+用于获取申报类型、申报方式、证件类型、性别、国籍、是否离开公司所在地、返回地风险级别及所属部门的选项数据。
+
+![3-3](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_2_2.png)
+
+##### 图3-3 查询字典表接口流程图
