--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
@@ -35,3 +35,11 @@ a）查询字典表接口流程图
 ![3-3](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_2_2.png)
 
 ##### 图3-3 查询字典表接口流程图
+
+b）风险地统计查询接口流程图
+
+用于统计中、高风险地数量以及中高风险地合计数量。
+
+![3-4](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_2_3.png)
+
+##### 图3-4 风险地统计查询接口流程图
