--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
@@ -43,3 +43,11 @@ b）风险地统计查询接口流程图
 ![3-4](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_2_3.png)
 
 ##### 图3-4 风险地统计查询接口流程图
+
+c）查询申报信息接口流程图
+
+用于查询所有员工的申报信息。
+
+![3-5](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_2_4.png)
+
+##### 图3-5 查询申报信息接口流程图
