--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
@@ -51,3 +51,11 @@ c）查询申报信息接口流程图
 ![3-5](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_2_4.png)
 
 ##### 图3-5 查询申报信息接口流程图
+
+d）查询省市区信息接口流程图
+
+用于获取省市区信息，作为【人员报务信息】页面中“所在区域”的选项数据。
+
+![3-6](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_2_5.png)
+
+##### 图3-6 查询省市区信息接口流程图
