--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
@@ -59,3 +59,13 @@ d）查询省市区信息接口流程图
 ![3-6](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_2_5.png)
 
 ##### 图3-6 查询省市区信息接口流程图
+
+e）新增人员报务信息接口
+
+用于新增人员报务信息。
+
+![3-7](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_2_6.png)
+
+##### 图3-7 新增人员报务信息接口流程图
+
+##### 2.3.3 关联（后端）全自动开发平台项目
