--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
@@ -69,3 +69,13 @@ e）新增人员报务信息接口
 ##### 图3-7 新增人员报务信息接口流程图
 
 ##### 2.3.3 关联（后端）全自动开发平台项目
+
+##### 前提条件： 您已完成创建前端应用项目、创建页面等基本操作。
+
+为展示和前两个案例的不同，本案例选择关联第三方项目的方式来关联后端项目，所关联的第三方项目仍由（后端）全自动开发平台进行开发。在关联第三方项目时，填写好对应服务器信息即可，如下图所示。
+
+![3-8](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_3_1.png)
+
+##### 图3-8 填写对应服务器信息
+
+##### 2.3.4 页面构建、数据绑定
