--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
@@ -79,3 +79,13 @@ e）新增人员报务信息接口
 ##### 图3-8 填写对应服务器信息
 
 ##### 2.3.4 页面构建、数据绑定
+
+疫情防控功能包含【人员报务信息页面】、【风险地统计页面】和【申报信息查询页面】三个页面的构建，如下图所示。
+
+![3-9](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_1_1.png)
+
+##### 图3-9 疫情防控功能
+
+a）人员报务信息页面
+
+a1）页面构建
