--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
@@ -89,3 +89,11 @@ e）新增人员报务信息接口
 a）人员报务信息页面
 
 a1）页面构建
+
+通过点击页面开发界面中大纲树选项，即可查看该页面使用到的所有控件，点击控件右侧的眼睛按钮，可显示或隐藏对应控件以展示不同的页面效果；控件的具体配置可根据实际需求进行自定义配置，若不清楚如何配置控件，可点击属性栏文档选项查看对应控件的帮助文档。
+
+##### 说明：您可根据功能开发的实际情况选择面向电脑端或手机端进行设计，本案例选择手机端，如下图所示：
+
+![3-10](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_1_2.png)
+
+##### 图3-10 大纲树1
