--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
@@ -97,3 +97,15 @@ a1）页面构建
 ![3-10](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_1_2.png)
 
 ##### 图3-10 大纲树1
+
+![3-11](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_1_3.png)
+
+##### 图3-11 大纲树2
+
+a2）数据绑定
+
+a2-1）设置页面变量
+
+点击页面开发界面上方工具栏“变量设置”选项，设置页面变量。
+
+##### 说明：由于申报类型、申报方式、证件类型、性别、国籍、是否离开公司所在地、返回地风险级别、所属部门的选项数据需通过调用查询字典表接口获取，返回地的选项数据需通过调用查询省市区信息接口获取，所以需要设置页面变量来接收调用接口获取的数据。
