--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
@@ -109,3 +109,17 @@ a2-1）设置页面变量
 点击页面开发界面上方工具栏“变量设置”选项，设置页面变量。
 
 ##### 说明：由于申报类型、申报方式、证件类型、性别、国籍、是否离开公司所在地、返回地风险级别、所属部门的选项数据需通过调用查询字典表接口获取，返回地的选项数据需通过调用查询省市区信息接口获取，所以需要设置页面变量来接收调用接口获取的数据。
+
+![3-12](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_1_4.png)
+
+##### 图3-12 设置页面变量
+
+a2-2）绑定页面加载前事件
+
+点击“属性栏 > 页面配置”绑定页面加载前事件，分别调用查询字典表数据接口和查询省市区信息接口获取选项数据，使用页面变量接收，如下图所示。
+
+##### 说明：接口地址填写（后端）全自动开发平台中对应接口基本信息下的接口路径即可。
+
+![3-13](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_1_5.png)
+
+##### 图3-13 执行绑定动作1
