--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
@@ -123,3 +123,15 @@ a2-2）绑定页面加载前事件
 ![3-13](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_1_5.png)
 
 ##### 图3-13 执行绑定动作1
+
+![3-14](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_1_6.png)
+
+##### 图3-14 执行绑定动作2
+
+a2-3）为控件绑定页面对应的页面变量，以下选择申报类型下拉选择框为样例，其他控件同理
+
+选中“申报类型”下拉选项框，点击属性栏下“属性 > 选项”旁的链接按钮，进入变量绑定页面，选择“页面变量 > 申报类型名称”，单击“确定”即可。
+
+![3-15](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_1_7.png)
+
+##### 图3-15 选中申报类型
