--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
@@ -147,3 +147,15 @@ a2-4）为申报按钮绑定点击事件
 ![3-17](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_1_9.png)
 
 ##### 图3-17 执行绑定动作1
+
+![3-18](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_1_9.png)
+
+##### 图3-18 执行绑定动作2
+
+b）风险地统计页面
+
+b1）页面构建
+
+本案例中【风险地统计页面】通过多次使用容器、文本控件以及表格控件进行页面构建，您也可以根据实际需求进行自定义设计。
+
+![3-19](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_2_1.png)
