--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
@@ -159,3 +159,19 @@ b1）页面构建
 本案例中【风险地统计页面】通过多次使用容器、文本控件以及表格控件进行页面构建，您也可以根据实际需求进行自定义设计。
 
 ![3-19](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_2_1.png)
+
+##### 图3-19 页面构建
+
+b2）数据绑定
+
+b2-1）设置页面变量
+
+下图中三个文本控件均需通过调用风险地统计查询接口来获取数据，所以需要设置页面变量来接收数据，点击页面上方“变量设置 > 页面变量”进行设置即可。
+
+![3-20](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_2_2.png)
+
+##### 图3-20 文本控件
+
+![3-21](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_2_3.png)
+
+##### 图3-21 变量设置
