--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
@@ -175,3 +175,15 @@ b2-1）设置页面变量
 ![3-21](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_2_3.png)
 
 ##### 图3-21 变量设置
+
+b2-2）为三个文本控件绑定页面变量，以下选择中风险区域数量作为样例，其余两个文本控件同理
+
+选中需绑定页面变量的文本控件，点击属性栏“属性 > 内容”旁的链接按钮，选择页面变量中风险数量即可。
+
+![3-22](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_2_4.png)
+
+##### 图3-22 点击链接按钮
+
+![3-23](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_2_5.png)
+
+##### 图3-23 变量绑定
