--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
@@ -199,3 +199,17 @@ b3）为表格控件绑定动作，调用风险地统计查询接口，显示人
 b4）为表格控件中查询全部选项绑定动作，跳转至【申报信息查询页面】
 
 选中表格控件，点击属性栏“属性 > 顶部操作”选项，配置“查看全部”操作条，并为该操作条绑定动作，跳转至【申报信息查询页面】。
+
+![3-25](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_2_7.png)
+
+##### 图3-25 配置“查看全部”操作条
+
+![3-26](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_2_8.png)
+
+##### 图3-26 执行绑定动作
+
+c）申报信息查询页面
+
+c1）页面构建
+
+【申报信息查询页面】仅使用了一个表格组件，主要用于显示所有的人员申报信息，并按条件查询，表格中的字段需自行设置。
