--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/3. 春节疫情防控.md
@@ -213,3 +213,15 @@ c）申报信息查询页面
 c1）页面构建
 
 【申报信息查询页面】仅使用了一个表格组件，主要用于显示所有的人员申报信息，并按条件查询，表格中的字段需自行设置。
+
+![3-27](https://www.feisuanyz.com/fspage/alcj/yqfk/yqfk_4_3_1.png)
+
+##### 图3-27 页面构建
+
+c2）数据绑定
+
+c2-1）设置页面变量风险级别，用于接收风险级别的选项数据。
+
+c2-2）自定义筛选项配置，并为筛选项“风险级别”绑定页面变量。
+
+c2-3）绑定页面加载前事件，调用查询字典表接口，获取风险级别的选项数据，并赋值给页面变量风险级别。
