--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/1. 入门概述.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/1. 入门概述.md
@@ -1,1 +1,13 @@
-test
+### 3. 快速入门
+
+#### 3.1 入门概述
+
+本章节为您介绍如何使用（前端）全自动开发平台快速构建一个前端应用，帮助您快速入门（前端）全自动开发平台。
+
+##### 3.1.1 准备工作
+
+a）在使用（前端）全自动开发平台之前，请确保您已购买飞算SoFlu软件机器人商用版，并使用商用版账号登录进入飞算云智官网（[购买链接见官网首页](https://www.feisuanyz.com/)）.
+
+b）单击右上角“控制台”，进入飞算SoFlu软件机器人控制台，下载（前端）全自动开发平台最新版客户端，安装到本地进行使用。
+
+c）使用商用版账号登录（前端）全自动开发平台。
