--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/1. 入门概述.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/1. 入门概述.md
@@ -17,3 +17,11 @@ c）使用商用版账号登录（前端）全自动开发平台。
 ##### 图1-1 商用版登陆界面
 
 ##### 3.1.2 使用流程
+
+下图为（前端）全自动开发平台快速构建一个前端应用的基本操作流程，描述了应用项目从创建到部署的全过程。平台更多丰富功能的使用，如使用模板创建应用项目、表单设计等请参见操作指南部分。
+
+##### 说明：关联后端项目操作也可以在需为页面或控件绑定动作时再进行，操作流程并不固定。
+
+![1-2](https://www.feisuanyz.com/fspage/ksrm/ksrm_0_2.png)
+
+##### 图1-2 基本操作流程
