--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/2. 创建应用项目.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/2. 创建应用项目.md
@@ -1,1 +1,11 @@
-test
+### 3. 快速入门
+
+#### 3.2 创建应用项目
+
+本节为您介绍如何创建应用项目。
+
+##### 说明：在（前端）全自动开发平台创建应用项目后，（后端）全自动开发平台将自动创建一个同名项目。
+
+##### 3.2.1 操作步骤
+
+a）进入（前端）全自动开发平台首页，或单击页面上方“应用管理”选项，进入应用管理界面。
