--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/2. 创建应用项目.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/2. 创建应用项目.md
@@ -9,3 +9,11 @@
 ##### 3.2.1 操作步骤
 
 a）进入（前端）全自动开发平台首页，或单击页面上方“应用管理”选项，进入应用管理界面。
+
+b）单击“新建空白应用”来创建应用项目。
+
+![2-1](https://www.feisuanyz.com/fspage/ksrm/ksrm_1_1.png)
+
+##### 图2-1 创建应用项目
+
+##### 说明：您也可以选择从模板新建应用或导入应用，具体操作请参见“操作指南 > 应用管理”部分。
