--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/2. 创建应用项目.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/2. 创建应用项目.md
@@ -17,3 +17,13 @@ b）单击“新建空白应用”来创建应用项目。
 ##### 图2-1 创建应用项目
 
 ##### 说明：您也可以选择从模板新建应用或导入应用，具体操作请参见“操作指南 > 应用管理”部分。
+
+c）写应用的基本信息，其中应用分组可通过分组设置创建后选择，单击“确定”即创建成功。
+
+说明：
+
+##### c1）应用名称由中文、英文、数字组成，2-36位。
+
+##### c2）应用路径由英文、数字组成，1-100位。
+
+##### c3）应用分组可通过分组设置创建后进行选择，实现应用项目的分类管理，如下图所示：
