--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/3. 创建页面.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/3. 创建页面.md
@@ -5,3 +5,11 @@
 本节为您介绍如何在应用项目下创建页面。
 
 ##### 3.3.1 操作步骤
+
+a）单击已创建的应用项目卡片，进入页面管理界面。
+
+##### 说明：应用项目下所有创建的页面将在该页面显示，用户可对创建的所有页面及页面间的关系一目了然。
+
+![3-1](https://www.feisuanyz.com/fspage/ksrm/ksrm_2_1.png)
+
+##### 图3-1 页面管理界面
