--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/3. 创建页面.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/3. 创建页面.md
@@ -13,3 +13,11 @@ a）单击已创建的应用项目卡片，进入页面管理界面。
 ![3-1](https://www.feisuanyz.com/fspage/ksrm/ksrm_2_1.png)
 
 ##### 图3-1 页面管理界面
+
+b）单击上方“新建页面”选项，系统弹出新建自定义页面。
+
+c）填写好页面的基本信息，单击“下一步”。
+
+##### 说明：
+
+##### c1）“页面路径”由英文、数字组成，2-50位。
