--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/3. 创建页面.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/3. 创建页面.md
@@ -21,3 +21,11 @@ c）填写好页面的基本信息，单击“下一步”。
 ##### 说明：
 
 ##### c1）“页面路径”由英文、数字组成，2-50位。
+
+##### c2）“页面名称”由中英文、数字、标点符号等字符组成，2-36位。
+
+##### c3）“上级菜单”为非必填项，可在新建分组后进行选择。
+
+##### c4）设置为首页的页面将在运行应用后默认显示。
+
+系统弹出“选择页面模板”窗口，该窗口中包含丰富多样的页面模板，您可以选择合适的页面模板来快速创建页面，选择好页面模板后，单击“确定”即可；若不需要使用模板创建页面，单击“创建空页面”即可。
