--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/4. 关联后端项目.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/4. 关联后端项目.md
@@ -5,3 +5,11 @@
 本节为您介绍如何关联后端项目。您可以选择关联（后端）全自动开发平台项目或第三方项目，关联后端项目后，便可以在为页面或控件绑定动作时使用所关联项目中的接口，进行相关数据对接操作。
 
 ##### 3.4.1 操作步骤
+
+a）双击创建好的页面，进入页面开发界面。
+
+b）在左侧页面工具栏，单击“后端项目 > 新建后端项目”。
+
+![4-1](https://www.feisuanyz.com/fspage/ksrm/ksrm_3_1.png)
+
+##### 图4-1 新建后端项目
