--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/4. 关联后端项目.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/4. 关联后端项目.md
@@ -13,3 +13,15 @@ b）在左侧页面工具栏，单击“后端项目 > 新建后端项目”。
 ![4-1](https://www.feisuanyz.com/fspage/ksrm/ksrm_3_1.png)
 
 ##### 图4-1 新建后端项目
+
+c）系统弹出“新增后端项目”对话框，您可以选择关联（后端）全自动开发平台项目或第三方项目，若需关联（后端）全自动开发平台项目，选择对应的项目名称即可；若需关联第三方项目，填写好对应服务器的信息即可。
+
+![4-2](https://www.feisuanyz.com/fspage/ksrm/ksrm_3_2.png)
+
+##### 图4-2 关联（后端）全自动开发平台项目，选择对应的项目名称
+
+![4-3](https://www.feisuanyz.com/fspage/ksrm/ksrm_3_3.png)
+
+##### 图4-3 关联第三方项目，填写好对应服务器的信息
+
+d）选择或填写信息完成后，单击“确定”。
