--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/5. 页面开发.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/5. 页面开发.md
@@ -1,1 +1,21 @@
-test
+### 3. 快速入门
+
+#### 3.5 页面开发
+
+本节为您介绍如何使用平台进行页面开发，主要包含页面开发界面概览、页面设计与配置、绑定动作、页面预览四部分内容。
+
+##### 3.5.1 页面开发界面概览
+
+![5-1](https://www.feisuanyz.com/fspage/ksrm/ksrm_4_1.png)
+
+##### 图5-1 页面开发界面概览
+
+##### 说明：
+
+##### 页面开发界面分为页面设置栏、页面工具栏、页面属性栏以及页面展示面板。
+
+##### a）通过上方页面设置栏，您可以对页面大小、显示终端、页面所需变量以及页面版本等进行设置，同时可以进行页面预览、提交页面版本、页面导出与保存等操作。
+
+##### b）左侧页面工具栏分为控件库、模板库、大纲树、后端项目和低代码。其中控件库集成了丰富的页面控件以供用户使用进行页面设计；模板库包含大量的页面模板、区块模板帮助用户快速实现页面开发；通过大纲树，用户可以清晰得知当前页面使用到的所有页面控件、以及控件间包含与被包含的关系等，同时用户可通过对控件进行隐藏或显示操作以展示不同的页面效果；后端项目用于关联当前页面所需使用接口所在的项目；低代码目前暂未开放，敬请期待。
+
+##### c）通过右侧页面属性栏，您可以对控件绑定动作，设置控件的属性、样式等；页面配置主要用于设置页面间的嵌套关系、为页面绑定动作；同时平台为每一个页面控件都配备了对应的控件帮助文档，若您对控件的使用不够清晰，可以查看相应的控件文档。
