--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/5. 页面开发.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/5. 页面开发.md
@@ -19,3 +19,17 @@
 ##### b）左侧页面工具栏分为控件库、模板库、大纲树、后端项目和低代码。其中控件库集成了丰富的页面控件以供用户使用进行页面设计；模板库包含大量的页面模板、区块模板帮助用户快速实现页面开发；通过大纲树，用户可以清晰得知当前页面使用到的所有页面控件、以及控件间包含与被包含的关系等，同时用户可通过对控件进行隐藏或显示操作以展示不同的页面效果；后端项目用于关联当前页面所需使用接口所在的项目；低代码目前暂未开放，敬请期待。
 
 ##### c）通过右侧页面属性栏，您可以对控件绑定动作，设置控件的属性、样式等；页面配置主要用于设置页面间的嵌套关系、为页面绑定动作；同时平台为每一个页面控件都配备了对应的控件帮助文档，若您对控件的使用不够清晰，可以查看相应的控件文档。
+
+##### d）界面中间最大的区域即为页面展示面板，用于展示页面设计效果。
+
+##### 3.5.2 页面设计与配置
+
+a）从左侧控件库中选择需使用的控件，拖至中间页面展示面板。
+
+b）在面板中选中控件，即可通过右侧页面属性栏对控件进行自定义设置。
+
+##### 说明：
+
+##### b1）您可以通过“编辑代码”对页面样式进行进一步的设计，若对样式代码开发不清晰，可点击对应的控件帮助文档进行查看。
+
+##### b2）页面配置中“是否设置为页面组件”选项表示是否让当前页面被其他页面选择为父级页面，实现页面嵌套，目前仅支持“导航布局”和“底部导航”两个导航控件。其中“导航布局”控件用于电脑端，“底部导航”控件用于手机端。当页面中既存在导航控件又存在其他控件时，同样可以实现页面嵌套。
