--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/6. 运行运用.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/6. 运行运用.md
@@ -7,3 +7,9 @@
 ##### 3.6.1 操作步骤
 
 a）页面开发完成后，回到应用管理页面，单击应用项目卡片上的“运行”图标即可。
+
+![6-1](https://www.feisuanyz.com/fspage/ksrm/ksrm_5_1.png)
+
+##### 图6-1 单击“运行”图标
+
+b）浏览器将自动弹出应用项目中的首页，您可以通过操作应用项目检验交互效果。
