--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/7. 打包应用.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/7. 打包应用.md
@@ -5,3 +5,11 @@
 应用开发完成后，您需对应用打包后才可部署使用，本节为您介绍如何打包开发完成的应用。
 
 ##### 3.7.1 操作步骤
+
+a）回到应用管理页面，选中对应的应用项目卡片，单击“版本打包”图标。
+
+![7-1](https://www.feisuanyz.com/fspage/ksrm/ksrm_6_1.png)
+
+##### 图7-1 单击“版本打包”图标
+
+b）填写好版本信息后，单击“确定”。
