--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/8. 部署应用.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/8. 部署应用.md
@@ -7,3 +7,13 @@
 ##### 3.8.1 前提条件
 
 您需要提前安装好nginx服务器。
+
+##### 3.8.2 操作步骤
+
+a）将应用生成的部署包解压到nginx服务器安装目录下。
+
+b）打开nginx服务器安装目录下的nginx.conf文件。
+
+##### 说明：一般在conf目录下，具体以您的安装目录为准。
+
+c）在nginx.conf文件中，配置nginx前端应用的目录地址，如下所示。
