--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/8. 部署应用.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/8. 部署应用.md
@@ -17,3 +17,12 @@ b）打开nginx服务器安装目录下的nginx.conf文件。
 ##### 说明：一般在conf目录下，具体以您的安装目录为准。
 
 c）在nginx.conf文件中，配置nginx前端应用的目录地址，如下所示。
+
+```
+location / {             
+root   /xxx/xxx; //前端应用的目录地址             
+index  index.html index.htm;         
+}
+```
+
+d）配置nginx后端代理，如下所示。
