--- a/SoFlu（前端）全自动开发平台教程/3. 快速入门/8. 部署应用.md
+++ b/SoFlu（前端）全自动开发平台教程/3. 快速入门/8. 部署应用.md
@@ -26,3 +26,12 @@ index  index.html index.htm;
 ```
 
 d）配置nginx后端代理，如下所示。
+
+
+```
+location ~ /xxxx/ {      //xxxx为前端应用使用到的后端项目名             
+proxy_pass   http://10.0.0.0;  //IP地址为后端项目的部署服务器地址         
+}
+```
+
+##### 说明：若有多个nginx后端代理，可添加多个location配置。
