--- a/SoFlu（前端）全自动开发平台教程/4. 表单设计/2. 创建数据库连接.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 表单设计/2. 创建数据库连接.md
@@ -1,1 +1,11 @@
-test
+### 4. 表单设计
+
+#### 4.2 创建数据库连接
+
+本节为您介绍如何创建数据库连接。
+
+##### 注意：目前（前端）全自动开发平台客户端仅支持可访问外网的数据库，不支持访问内网或本地的数据库。
+
+#### 4.2.1 操作步骤
+
+a）单击应用项目卡片，进入页面管理界面。
