--- a/SoFlu（前端）全自动开发平台教程/4. 表单设计/2. 创建数据库连接.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 表单设计/2. 创建数据库连接.md
@@ -9,3 +9,13 @@
 #### 4.2.1 操作步骤
 
 a）单击应用项目卡片，进入页面管理界面。
+
+![2-1](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_1_1.png)
+
+##### 图2-1 页面管理界面
+
+b）单击页面管理界面上方的“表单设计”选项，进入表单管理界面，如下所示。
+
+![2-2](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_1_2.png)
+
+##### 图2-2 进入表单管理界面
