--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/2. 创建数据库连接.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/2. 创建数据库连接.md
@@ -15,3 +15,15 @@ a）单击应用项目卡片，进入页面管理界面。
 ##### 图2-1 页面管理界面
 
 b）单击页面管理界面上方的“表单设计”选项，进入表单管理界面，如下所示。
+
+![2-2](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_1_2.png)
+
+##### 图2-2 进入表单管理界面
+
+c）单击表单管理界面上方“数据库设置”选项，进入数据库设置。
+
+![2-3](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_1_3.png)
+
+##### 图2-3 进入数据库设置
+
+d）单击“新增”，新增数据库连接。
