--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/3. 创建表单数据分组.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/3. 创建表单数据分组.md
@@ -5,3 +5,13 @@
 本节为您介绍如何创建表单数据分组。
 
 ##### 说明：创建的表单数据分组不仅用于表单数据接口的分组管理，还作为后续生成页面操作完成后，自动生成表单数据接口的放置位置。
+
+#### 1.3.1 操作步骤
+
+a）在表单管理界面，单击上方的“表单数据”选项，进入表单数据管理页面。
+
+b）单击“新建分组”即可进行表单数据分组。
+
+![3-1](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_2_2.png)
+
+##### 图3-1 进行表单数据分组
