--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/3. 创建表单数据分组.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/3. 创建表单数据分组.md
@@ -15,3 +15,11 @@ b）单击“新建分组”即可进行表单数据分组。
 ![3-1](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_2_2.png)
 
 ##### 图3-1 进行表单数据分组
+
+c）填写分组名和分组路径，单击“确定”即创建分组完成。
+
+##### 注意：分组路径需以“/”开头。
+
+![3-2](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_2_3.png)
+
+##### 图3-2 填写分组名和分组路径
