--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/4. 创建表单.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/4. 创建表单.md
@@ -7,3 +7,9 @@
 #### 1.4.1 操作步骤
 
 a）进入表单管理界面，单击“新建模块”创建表单分组。
+
+##### 说明：若不需进行分组，此步可省略，直接进行下一步。
+
+![4-1](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_3_1.png)
+
+##### 图4-1 创建表单分组
