--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/4. 创建表单.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/4. 创建表单.md
@@ -13,3 +13,11 @@ a）进入表单管理界面，单击“新建模块”创建表单分组。
 ![4-1](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_3_1.png)
 
 ##### 图4-1 创建表单分组
+
+b）单击上方“新建表单”选项，进入新建表单页面。
+
+c）填写新建表单的基本信息，单击“确定”即创建表单完成。
+
+![4-2](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_3_2.png)
+
+##### 图4-2 填写新建表单的基本信息
