Update 5.  表单设计与配置.md

--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/5.  表单设计与配置.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/5.  表单设计与配置.md
@@ -7,3 +7,11 @@
 #### 1.5.1 操作步骤
 
 a）双击创建好的表单，进入表单设计与配置界面。
+
+![5-1](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_4_1.png)
+
+##### 图5-1 进入表单设计与配置界面
+
+b）左侧为表单控件库，您可以为指定字段选择所需的表单控件拖至设计面板中。
+
+c）选中控件便可以通过右侧的属性栏对控件进行自定义设置，其中“属性”页签下为控件的基本设置，“表单配置”页签下可设置数据表索引和外键信息。
