--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/5.  表单设计与配置.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/5.  表单设计与配置.md
@@ -15,3 +15,11 @@ a）双击创建好的表单，进入表单设计与配置界面。
 b）左侧为表单控件库，您可以为指定字段选择所需的表单控件拖至设计面板中。
 
 c）选中控件便可以通过右侧的属性栏对控件进行自定义设置，其中“属性”页签下为控件的基本设置，“表单配置”页签下可设置数据表索引和外键信息。
+
+##### 注意：和页面开发界面一样，表单设计界面也有每个表单控件的控件帮助文档，您可根据需要自行查看。
+
+![5-2](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_4_2.png)
+
+##### 图5-2 设置数据表索引和外键信息
+
+d）表单设计与配置完成后，单击上方“保存”，保存当前表单配置。
