--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/6. 发布表单.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/6. 发布表单.md
@@ -1,1 +1,9 @@
-test
+### 1. 表单设计
+
+#### 1.6 发布表单
+
+表单设计并配置完成后，您需要发布表单，才可以在后续进行创建使用表单数据和生成页面操作。本节为您介绍如何发布表单。
+
+#### 1.6.1 操作步骤
+
+a）在表单设计界面，单击上方的“提交版本”选项。
