--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/6. 发布表单.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/6. 发布表单.md
@@ -7,3 +7,11 @@
 #### 1.6.1 操作步骤
 
 a）在表单设计界面，单击上方的“提交版本”选项。
+
+![6-1](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_5_1.png)
+
+##### 图6-1 单击“提交版本”选项
+
+b）系统提示“是否确认要发布版本”，单击“确定”。
+
+c）系统提示“执行成功”，即发布表单完成。
