--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/7. 同步数据.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/7. 同步数据.md
@@ -1,1 +1,11 @@
-test
+### 1. 表单设计
+
+#### 1.7 同步数据
+
+通过同步数据，可以将所有已发布的表单数据同步到数据库。本节为您介绍如何同步数据。
+
+#### 1.7.1 操作步骤
+
+a）回到表单管理界面，单击上方“版本列表”选项，进入数据库版本列表。
+
+![7-1](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_6_1.png)
