--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/7. 同步数据.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/7. 同步数据.md
@@ -9,3 +9,11 @@
 a）回到表单管理界面，单击上方“版本列表”选项，进入数据库版本列表。
 
 ![7-1](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_6_1.png)
+
+##### 图7-1 单击“版本列表”选项
+
+b）单击“保存新版本”，输入版本描述，单击“确定”即可将当前所有已发布表单数据保存为新版本。
+
+c）在数据库版本列表，单击“同步”，系统弹出数据库同步配置窗口，根据发布表单的具体情况，选择“重建整表”或“更新字段”，单击“确定”。
+
+![7-2](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_6_2.png)
