--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/8. 生成页面.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/8. 生成页面.md
@@ -9,3 +9,15 @@
 您已完成创建数据库连接、创建表单数据分组、发布表单、同步数据等操作。
 
 #### 1.8.2 操作步骤
+
+a）进入需生成页面的表单设计界面，单击上方“生成页面”选项。
+
+![8-1](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_7_1.png)
+
+##### 图8-1 单击“生成页面”选项
+
+b）系统弹出生成页面窗口，选择表单数据分组（即当前表单在生成页面后对应表单数据接口存放的位置），再单击“确定”。
+
+![8-2](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_7_2.png)
+
+##### 图8-2 选择表单数据分组
