--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/9. 创建并使用表单数据接口.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/9. 创建并使用表单数据接口.md
@@ -1,1 +1,13 @@
-test
+### 1. 表单设计
+
+#### 1.9 创建并使用表单数据接口
+
+本节为您介绍如何创建并使用表单数据接口。
+
+#### 1.9.1 操作步骤
+
+a）创建表单数据接口
+
+a1）进入表单管理界面，单击上方“表单数据”选项。
+
+![9-1](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_8_1.png)
