--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/9. 创建并使用表单数据接口.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/9. 创建并使用表单数据接口.md
@@ -11,3 +11,13 @@ a）创建表单数据接口
 a1）进入表单管理界面，单击上方“表单数据”选项。
 
 ![9-1](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_8_1.png)
+
+##### 图9-1 单击“表单数据”选项
+
+a2）进入表单数据管理页面，选择一个分组，单击“新建表单数据”。
+
+![9-2](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_8_2.png)
+
+##### 图9-2 单击“新建表单数据”
+
+a3）进入新建表单数据页面，填写表单数据接口的基本信息，选择“SQL类型”，填写接口所需参数以及SQL语句。
