--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/9. 创建并使用表单数据接口.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/9. 创建并使用表单数据接口.md
@@ -21,3 +21,13 @@ a2）进入表单数据管理页面，选择一个分组，单击“新建表单
 ##### 图9-2 单击“新建表单数据”
 
 a3）进入新建表单数据页面，填写表单数据接口的基本信息，选择“SQL类型”，填写接口所需参数以及SQL语句。
+
+##### 说明：此处的新建表单数据相当于新增一个接口，用于操作已创建表单中的数据。
+
+![9-3](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_8_3.png)
+
+##### 图9-3 填写接口所需参数以及SQL语句
+
+a4）所有信息填写完成后，单击“确定”即创建表单数据接口完成。
+
+b）使用表单数据接口
