--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/9. 创建并使用表单数据接口.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/9. 创建并使用表单数据接口.md
@@ -31,3 +31,9 @@ a3）进入新建表单数据页面，填写表单数据接口的基本信息，
 a4）所有信息填写完成后，单击“确定”即创建表单数据接口完成。
 
 b）使用表单数据接口
+
+用户在进行页面开发、绑定动作操作时，您可以选择所需使用的表单数据接口，如下图所示。
+
+![9-4](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_9_1.png)
+
+##### 图9-4 选择所需使用的表单数据接口
