--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/1. 基础概述.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/1. 基础概述.md
@@ -1,1 +1,9 @@
-test
+### 1. 系统配置
+
+#### 1.1 资源池配置
+
+##### 1.1.1 基础概述
+
+a）资源池是性能测试运行的载体。新增性能测试时必须选择一个资源池，执行性能测试时系统将自动检测该资源池是否可用，若不可用则性能测试将无法执行。
+
+b）平台目前支持的资源池类型包含Docker资源池和虚拟机资源池，用户可以自定义资源池。若需自定义资源池，需保证自定义资源池的网络权限可以被系统访问，若系统无法访问到，性能测试将无法执行。
