--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/2. 部署资源池.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/2. 部署资源池.md
@@ -5,3 +5,13 @@
 ##### 1.1.2 部署资源池
 
 创建资源池之前需要先做好对应资源池类型的部署。本节将为您介绍如何部署资源池，包含Docker资源池部署和虚拟机资源池部署。
+
+##### 1.1.2.1 前提条件
+
+节点引擎用于管理性能测试，包含启动、关闭性能测试以及收集日志，所以在部署资源池之前需要先部署节点引擎。
+
+##### 1.1.2.2 操作步骤
+
+a）节点引擎部署
+
+a1）进入全自动测试平台首页，单击页面右上角的工具下载按钮，如图2-1所示：
