--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/2. 部署资源池.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/2. 部署资源池.md
@@ -15,3 +15,13 @@
 a）节点引擎部署
 
 a1）进入全自动测试平台首页，单击页面右上角的工具下载按钮，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fstest/xtpz/zybs_0.png)
+
+##### 图2-1 选择工具下载
+
+a2）进入工具下载页面，下载节点引擎包，如图2-2所示：
+
+![2-2](https://www.feisuanyz.com/fstest/xtpz/zybs_1.png)
+
+##### 图2-2 工具下载页面
