--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/2. 部署资源池.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/2. 部署资源池.md
@@ -25,3 +25,9 @@ a2）进入工具下载页面，下载节点引擎包，如图2-2所示：
 ![2-2](https://www.feisuanyz.com/fstest/xtpz/zybs_1.png)
 
 ##### 图2-2 工具下载页面
+
+a3）在Linux或Unix服务器，启动节点引擎包即可。
+
+##### 说明：节点引擎服务地址在新增资源时会用到。
+
+b）Docker资源池部署
