--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/2. 部署资源池.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/2. 部署资源池.md
@@ -31,3 +31,11 @@ a3）在Linux或Unix服务器，启动节点引擎包即可。
 ##### 说明：节点引擎服务地址在新增资源时会用到。
 
 b）Docker资源池部署
+
+b1）进入工具下载页面，下载资源镜像包，如图2-3所示：
+
+![2-3](https://www.feisuanyz.com/fstest/xtpz/zybs_3.png)
+
+##### 图2-3 工具下载页面
+
+b2）在Linux或Unix服务器（可与节点引擎部署服务同一机器），安装镜像，开放2375端口，查看Docker镜像信息，如图2-4所示：
