--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/2. 部署资源池.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/2. 部署资源池.md
@@ -39,3 +39,13 @@ b1）进入工具下载页面，下载资源镜像包，如图2-3所示：
 ##### 图2-3 工具下载页面
 
 b2）在Linux或Unix服务器（可与节点引擎部署服务同一机器），安装镜像，开放2375端口，查看Docker镜像信息，如图2-4所示：
+
+![2-4](https://www.feisuanyz.com/fstest/xtpz/zybs_7.png)
+
+##### 图2-4 Docker镜像信息
+
+c）虚拟机资源池部署
+
+c1）进入工具下载页面，下载JMeter部署包，如图2-5所示：
+
+![2-5](https://www.feisuanyz.com/fstest/xtpz/zybs_5.png)
