--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/2. 部署资源池.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/2. 部署资源池.md
@@ -49,3 +49,7 @@ c）虚拟机资源池部署
 c1）进入工具下载页面，下载JMeter部署包，如图2-5所示：
 
 ![2-5](https://www.feisuanyz.com/fstest/xtpz/zybs_5.png)
+
+##### 图2-5 工具下载页面
+
+c2）上传JMeter部署包到Linux或Unix服务器（可与节点引擎部署服务同一机器）上的任一路径，完成解压即可。
