--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/3. 新增资源池.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/3. 新增资源池.md
@@ -5,3 +5,11 @@
 ##### 1.1.3 新增资源池
 
 本节介绍新增资源池的具体操作过程。
+
+##### 1.1.3.1 操作步骤
+
+a）节点引擎部署
+
+a1）进入全自动测试平台首页，单击右上方系统配置按钮，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fstest/xtpz/source_001.png)
