--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/3. 新增资源池.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/3. 新增资源池.md
@@ -13,3 +13,11 @@ a）节点引擎部署
 a1）进入全自动测试平台首页，单击右上方系统配置按钮，如图3-1所示：
 
 ![3-1](https://www.feisuanyz.com/fstest/xtpz/source_001.png)
+
+##### 图3-1 全自动测试平台首页
+
+a2）进入系统配置页面，单击“服务 > 资源池管理”，选择“新增资源池”，如图3-2所示：
+
+![3-2](https://www.feisuanyz.com/fstest/xtpz/source_002.png)
+
+##### 图3-2 系统配置页面
