--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/3. 新增资源池.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/3. 新增资源池.md
@@ -21,3 +21,9 @@ a2）进入系统配置页面，单击“服务 > 资源池管理”，选择“
 ![3-2](https://www.feisuanyz.com/fstest/xtpz/source_002.png)
 
 ##### 图3-2 系统配置页面
+
+a3）系统弹出新增资源池页面，在此处填写资源池名称，并选择资源池类型即可，如图3-3所示：
+
+##### 说明：平台目前支持的资源池类型有Docker和虚拟机。
+
+![3-3](https://www.feisuanyz.com/fstest/xtpz/source_003.png)
