--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/3. 新增资源池.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/3. 新增资源池.md
@@ -27,3 +27,13 @@ a3）系统弹出新增资源池页面，在此处填写资源池名称，并选
 ##### 说明：平台目前支持的资源池类型有Docker和虚拟机。
 
 ![3-3](https://www.feisuanyz.com/fstest/xtpz/source_003.png)
+
+##### 图3-3 新增资源池页面
+
+a4）本节以新增虚拟机类型资源池为例，填写完成后，单击“提交”即可，如图3-4所示：
+
+![3-4](https://www.feisuanyz.com/fstest/xtpz/source_004.png)
+
+##### 图3-4 示例
+
+a5）您可以看到新增的资源池在资源池列表显示，如图3-5所示：
