--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/3. 新增资源池.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/3. 新增资源池.md
@@ -37,3 +37,7 @@ a4）本节以新增虚拟机类型资源池为例，填写完成后，单击“
 ##### 图3-4 示例
 
 a5）您可以看到新增的资源池在资源池列表显示，如图3-5所示：
+
+![3-5](https://www.feisuanyz.com/fstest/xtpz/source_018.png)
+
+##### 图3-5 新增资源池成功
