--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/4. 修改资源池.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/4. 修改资源池.md
@@ -7,3 +7,13 @@
 本节介绍修改资源池的具体操作过程。
 
 ##### 1.1.4.1 操作步骤
+
+a）进入资源池管理页面，选中需修改的资源池，单击修改按钮，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fstest/xtpz/source_011.png)
+
+##### 图4-1 资源池管理页面
+
+b）系统弹出修改资源池页面，修改资源池信息，如图4-2所示：
+
+![4-2](https://www.feisuanyz.com/fstest/xtpz/source_012.png)
