--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/5. 删除资源池.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/5. 删除资源池.md
@@ -1,1 +1,11 @@
-test
+### 1. 系统配置
+
+#### 1.1 资源池配置
+
+##### 1.1.5 删除资源池
+
+本节介绍删除资源池的具体操作过程。
+
+##### 1.1.5.1 操作步骤
+
+##### 注意：正在运行中的资源池不可以进行删除操作。
