--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/5. 删除资源池.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/5. 删除资源池.md
@@ -9,3 +9,11 @@
 ##### 1.1.5.1 操作步骤
 
 ##### 注意：正在运行中的资源池不可以进行删除操作。
+
+a）进入资源池管理页面，选中需删除的资源池，单击操作列的删除按钮，如图5-1所示：
+
+![5-1](https://www.feisuanyz.com/fstest/xtpz/source_013.png)
+
+##### 图5-1 资源池管理页面
+
+b）若资源池下不含资源，该资源池会直接被删除。
