--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/6. 新增Docker资源.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/6. 新增Docker资源.md
@@ -1,1 +1,13 @@
-test
+### 1. 系统配置
+
+#### 1.1 资源池配置
+
+##### 1.1.6 新增Docker资源
+
+本节介绍新增Docker资源的具体操作过程。
+
+##### 1.1.6.1 前提条件
+
+您需要先部署好Docker资源池，具体可参见[《SoFlu全自动测试平台教程第1.1.1.2节：部署资源池》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/1.%20%E7%B3%BB%E7%BB%9F%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E9%85%8D%E7%BD%AE/2.%20%E9%83%A8%E7%BD%B2%E8%B5%84%E6%BA%90%E6%B1%A0.md)。
+
+##### 1.1.6.2 操作步骤
