--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/8. 修改资源.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/8. 修改资源.md
@@ -1,1 +1,14 @@
-test
+### 1. 系统配置
+
+#### 1.1 资源池配置
+
+##### 1.1.8 修改资源
+
+本节主要介绍在指定资源池下修改资源的具体操作步骤。
+
+##### 1.1.8.1 操作步骤
+
+##### 注意：正在运行中的资源不能进行修改操作。
+
+a）进入指定资源池资源管理页面，单击需修改资源操作列的修改按钮，如图8-1所示：
+
