--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/8. 修改资源.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/8. 修改资源.md
@@ -12,3 +12,10 @@
 
 a）进入指定资源池资源管理页面，单击需修改资源操作列的修改按钮，如图8-1所示：
 
+![8-1](https://www.feisuanyz.com/fstest/xtpz/source_015.png)
+
+##### 图8-1 资源池管理页面
+
+b）进入修改资源页面，修改对应的信息，如图8-2所示：
+
+![8-2](https://www.feisuanyz.com/fstest/xtpz/source_019.png)
