--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/9. 删除资源.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/9. 删除资源.md
@@ -7,3 +7,11 @@
 本节介绍在指定资源池下删除资源的具体操作步骤。
 
 ##### 1.1.9.1 操作步骤
+
+##### 注意：正在运行中的资源不能进行删除操作。
+
+a）进入指定资源池资源管理页面，单击需删除资源操作列的删除按钮，如图9-1所示：
+
+![9-1](https://www.feisuanyz.com/fstest/xtpz/source_016.png)
+
+##### 图9-1 资源管理页面
