--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/10. 检查资源状态.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/10. 检查资源状态.md
@@ -1,1 +1,13 @@
-test
+### 1. 系统配置
+
+#### 1.1 资源池配置
+
+##### 1.1.10 检查资源状态
+
+本节介绍检查指定资源池中资源的资源状态的具体操作过程。
+
+##### 1.1.10.1 操作步骤
+
+##### 注意：正在运行中的资源不能进行修改操作。
+
+a）进入指定资源池资源管理页面，单击需检查资源状态资源操作列的“资源状态”选项，如图10-1所示：
