--- a/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/10. 检查资源状态.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/1. 资源池配置/10. 检查资源状态.md
@@ -11,3 +11,11 @@
 ##### 注意：正在运行中的资源不能进行修改操作。
 
 a）进入指定资源池资源管理页面，单击需检查资源状态资源操作列的“资源状态”选项，如图10-1所示：
+
+![10-1](https://www.feisuanyz.com/fstest/xtpz/source_020.png)
+
+##### 图10-1 资源管理页面
+
+b）系统提示该资源连接正常或失败，如图10-2所示：
+
+![10-2](https://www.feisuanyz.com/fstest/xtpz/source_021.png)
