--- a/SoFlu全自动测试平台教程/1. 系统配置/2. 函数库中心/1. 查看函数库.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/2. 函数库中心/1. 查看函数库.md
@@ -5,3 +5,11 @@
 ##### 1.2.1 查看函数库
 
 本节介绍查看函数库中心所有函数的具体操作过程。
+
+##### 1.2.1.1 操作步骤
+
+a）进入全自动测试平台，单击右上方的系统配置按钮，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fstest/xtpz/function_1_1.png)
+
+##### 图1-1 全自动测试平台首页
