--- a/SoFlu全自动测试平台教程/1. 系统配置/2. 函数库中心/1. 查看函数库.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/2. 函数库中心/1. 查看函数库.md
@@ -13,3 +13,11 @@ a）进入全自动测试平台，单击右上方的系统配置按钮，如图1
 ![1-1](https://www.feisuanyz.com/fstest/xtpz/function_1_1.png)
 
 ##### 图1-1 全自动测试平台首页
+
+b）进入系统配置页面，单击“系统 > 函数库中心”，即可看到函数库中心的所有函数，如图1-2所示：
+
+##### 说明：函数库中心的函数分为系统函数和自定义函数，您可以在自定义函数选项下导入自定义函数。
+
+![1-2](https://www.feisuanyz.com/fstest/xtpz/function_1_2.png)
+
+##### 图1-2 函数库中心页面
