--- a/SoFlu全自动测试平台教程/1. 系统配置/2. 函数库中心/2. 导入自定义函数.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/2. 函数库中心/2. 导入自定义函数.md
@@ -7,3 +7,13 @@
 全自动测试平台不仅提供丰富的函数库，还支持用户根据自身需求自定义函数。
 
 本节主要介绍导入自定义函数的具体操作过程。
+
+##### 说明：关于如何自定义函数，您可以参考[《SoFlu（后端）高阶专题第3章：自定义函数》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E9%AB%98%E9%98%B6%E4%B8%93%E9%A2%98/3.%20%E8%87%AA%E5%AE%9A%E4%B9%89%E5%87%BD%E6%95%B0.md)查看详情。
+
+##### 1.2.2.1 操作步骤
+
+a）进入函数库中心页面，选择“自定义函数”，单击“导入自定义函数”选项，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fstest/xtpz/function_2_1.png)
+
+##### 图2-1 函数库中心页面
