--- a/SoFlu全自动测试平台教程/1. 系统配置/3. 操作日志/1. 查看操作日志.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/3. 操作日志/1. 查看操作日志.md
@@ -5,3 +5,14 @@
 ##### 1.3.1 查看操作日志
 
 本节介绍查看操作日志的具体操作过程，操作日志记录了用户在全自动测试平台中的所有操作信息以及相关请求参数。
+
+##### 1.3.1.1 操作步骤
+
+a）进入全自动测试平台，单击右上方的系统设置按钮，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fstest/xtpz/log/caozuorizi_1.png)
+
+##### 图3-1 选择系统设置
+
+b）进入系统设置页面，单击“系统 > 操作日志”，即可查看所有的操作日志，如图1-2所示：
+
