--- a/SoFlu全自动测试平台教程/1. 系统配置/3. 操作日志/1. 查看操作日志.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/3. 操作日志/1. 查看操作日志.md
@@ -16,3 +16,6 @@ a）进入全自动测试平台，单击右上方的系统设置按钮，如图3
 
 b）进入系统设置页面，单击“系统 > 操作日志”，即可查看所有的操作日志，如图1-2所示：
 
+![3-2](https://www.feisuanyz.com/fstest/xtpz/log/caozuorizi_2.png)
+
+##### 图3-2 操作日志页面
