--- a/SoFlu全自动测试平台教程/1. 系统配置/4. 系统参数/1. 查看系统参数.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/4. 系统参数/1. 查看系统参数.md
@@ -1,1 +1,12 @@
-test
+### 1. 系统配置
+
+#### 1.4 系统参数
+
+##### 1.4.1 查看系统参数
+
+本节为您介绍如何查看系统参数。
+
+##### 1.4.1.1 操作步骤
+
+a）进入全自动测试平台，单击右上方的系统设置按钮，如图3-1所示：
+
