--- a/SoFlu全自动测试平台教程/1. 系统配置/4. 系统参数/1. 查看系统参数.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/4. 系统参数/1. 查看系统参数.md
@@ -10,3 +10,10 @@
 
 a）进入全自动测试平台，单击右上方的系统设置按钮，如图3-1所示：
 
+![3-1](https://www.feisuanyz.com/fstest/xtpz/log/caozuorizi_1.png)
+
+##### 图3-1 选择系统设置
+
+b）进入系统设置页面，单击“系统 > 系统参数”，即可查看平台的系统参数，目前显示的是prometheus的监控地址，如图3-2所示：
+
+![3-2](https://www.feisuanyz.com/fstest/xtpz/sysparams/canshu_1.png)
