--- a/SoFlu全自动测试平台教程/1. 系统配置/4. 系统参数/1. 查看系统参数.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/4. 系统参数/1. 查看系统参数.md
@@ -17,3 +17,5 @@ a）进入全自动测试平台，单击右上方的系统设置按钮，如图3
 b）进入系统设置页面，单击“系统 > 系统参数”，即可查看平台的系统参数，目前显示的是prometheus的监控地址，如图3-2所示：
 
 ![3-2](https://www.feisuanyz.com/fstest/xtpz/sysparams/canshu_1.png)
+
+##### 图3-2 系统参数页面
