--- a/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/1. 下载安装谷歌浏览器录制插件.md
+++ b/SoFlu全自动测试平台教程/1. 系统配置/5. 接口录制/1. 下载安装谷歌浏览器录制插件.md
@@ -7,3 +7,13 @@
 本节将为您具体介绍如何下载并安装谷歌浏览器录制插件。
 
 ##### 说明：目前全自动测试平台仅支持谷歌浏览器中接口的录制。
+
+##### 1.5.1.1 下载谷歌浏览器录制插件
+
+a）进入全自动测试平台，单击右上角“工具下载”选项，如图5-1所示：
+
+![5-1](https://www.feisuanyz.com/fstest/xtpz/google/google_1.png)
+
+##### 图5-1 单击工具下载
+
+b）系统弹出工具下载页面，单击“谷歌浏览器录制插件”，下载插件压缩包，如图5-2所示：
